app/client/stylesheets/smartervote.import.less
@controls-vertical-padding-base: 1.5vh;
@controls-vertical-padding-min:  1rem;

@height-answers:                 8vh;
@height-slider:                  4em * 1.3; // Four line heights
@height-question-nav:            6vh;
@height-reset-button:            4vh;

// Slider customisation
@import "noui.import.less";

body {

}

/*
 * Reset bootstrap buttons
 */
.btn {
  background: transparent;
  border: 0;
  border-radius: 0;
  color: black;
  
  &:focus,
  &:hover,
  &:active {
    outline: 0;
    background: transparent;
    box-shadow: none;
    color: black;
  }
  
  &:focus {
    color: #444;
    text-decoration: underline;
  }
}

/*
 * Main app panel that contains all parts
 * covers the full viewport
 */
#smartervote {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  overflow: hidden; // prevent weird scrollbars, but be careful nothing important gets cut off
  
  background: white;
}

/*
 * App Logo, menu and language selection
 */
#app-header {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 11000;
  
  padding: 1em;
}

.languages {
  display: inline-block;
  
  span {
    display: inline-block;
    padding: 0 0.5rem;
  }
}

/*
 * Container to the main svg element
 */
#bubbles-container {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

/*
 * Panel for questions and answering
 * positioned on top of bubble network
 */
#content {
  position: absolute;
  z-index: 10000;
  top: 0;
  bottom: 0;
  right: 46px;
  width: 33%;
  overflow: auto;
  
  /*
   * Question index, main text and "more info"
   * ? rename, e.g. #question?
   */
  #header {
    padding-top: 1em;
    
    .control-label {
      font-size: 2vw; // of viewport width
    }
    
    .info {
      margin: 15px 0px;
    }
  }
  
  /*
   * Contains actual answering controls and question navigation
   * tacked to bottom of #content
   */
  .footer {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    padding-top: @controls-vertical-padding-min;
    
    /*
     * Answer buttons (yes/no || max/min)
     * ? rename to .answers?
     */
    .buttons {
      display: -webkit-flex;
      display: -ms-flex;
      display: flex;
      
      button {
        -webkit-flex: 1 0 50%;
        -ms-flex: 1 0 50%;
        flex: 1 0 50%;
        
        height: @height-answers;
        min-height: 8rem;
        padding: 0;
        
        font-weight: bold;
        font-size: 1.5vw; // of viewport width
        white-space: normal;
        
        &.max {
          text-align: left;
        }
        
        &.min {
          text-align: right;
        }
        
        span {
          display: block;
          
          font-size: 4vw; // of viewport width
          line-height: 0.9;
          
          text-transform: uppercase;
        }
      }
    }
  }
}

/*
 * This is the container generated by the custom scrollbar
 *
 * 1. it uses relative positioning, so can't use top-bottom absolute positioning
 * 2. might be theme related, check when customising
 * 3. footer height!
 */
.mCSB_container {
  min-height: 100%; /* 1 */
  margin-right: 30px !important; /* 2 */
  padding-bottom: 33rem; /* 3 */
}

/*
 * Link to the page showing all questions
 */
#show-all-questions {
  float: right;
}

.showInfo,
.hideInfo {
  font-size: 1.2vw;
}

/*
 * Generic styles for all control groups
 */
.control-section {
  -webkit-flex-flow: wrap;
  -ms-flex-wrap: wrap;
  flex-flow: wrap;
  
  border-top: 1px solid gray;
  
  &:before,
  &:after {
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    
    height: @controls-vertical-padding-base;
    min-height: @controls-vertical-padding-min;
    
    content: ' ';
  }
}

/*
 * Question navigation
 * i.e. previous/next and go to Score
 */
#question-navigation {
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  
  button {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
    
    padding: 0;
    
    line-height: @height-question-nav;
    min-height: 4.5rem;
  }
  
  #back {
    text-align: left;
  }
  
  #next {
    text-align: right;
  }
  
  #gotoScore {
    -webkit-flex: 1 0 50%;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
    
    border: 1px solid gray;
    border-top: 0;
    border-bottom: 0;
    
    font-weight: bold;
    font-size: 1.2em;
  }
}

/*
 * Button for resetting all answers
 */
#reset {
  width: 100%;
  padding: 0;
  
  font-size: 0.9em;
  line-height: @height-reset-button;
  min-height: 3rem;
  
  &:hover {
    color: red;
  }
  
  &:after {
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex:  0 0 100%;
    flex: 0 0 100%;
    
    height: @controls-vertical-padding-base;
    min-height: @controls-vertical-padding-min;
    
    content: ' ';
  }
}

/*
 * Score panel
 */
#score {
  #mybubbles-preview {
    width: 300px;
    height: auto;
  }
}

/*
 * Score gauge on left side of the view
 */
#score-gauge {
  position: absolute;
  top: 50%;
}

